--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,4 +1,5 @@
 {% extends 'blog/base.html' %}
+{% load crispy_forms_tags %}
 
 {% block head_title %}
     {{post.title}} - Blog
@@ -77,15 +78,21 @@
                             <div class="card-body">
                                 <!-- Comment form-->
                                 {% if user.is_authenticated %}
-                                <form class="mb-4">
-                                    <textarea class="form-control" rows="3" placeholder="Join the discussion and leave a comment!"></textarea>
+                                <form class="mb-4" id="comment-form" method="post"
+                                      action="{{post.get_absolute_url}}new_comment/">
+                                    {% csrf_token %}
+                                    <div class="form-group">
+                                        {{comment_form | crispy}}
+                                    </div>
+                                    <button type="submit" class="btn btn-primary">Submit</button>
                                 </form>
                                 {% else %}
                                 <a role="button" class="btn btn-dark btn-block btn-sm" href="#"
                                     data-toggle="modal" data-target="#loginModal">
-                                  Log in and Leave a comment
+                                    Log in and Leave a comment
                                 </a>
                                 {% endif %}
+
                                 {% if post.comment_set.exists %}
                                 {% for comment in post.comment_set.iterator %}
                                 <!-- Single comment-->
